#390  Fixed margin so that ranked variant horizontal scroll bar doesn't overlay 'reorder' link.

--- a/assets/css/sass/site.sass
+++ b/assets/css/sass/site.sass
@@ -864,13 +864,13 @@ a
   #feature-matrix-note
     padding-left: 165px
     font-size: 12px
-    margin-top: -7px
+    margin-top: 0px
 
   #move-rows
     float: left
     font-size: 11px !important
     color: $text-color !important
-    margin-top: -7px
+    margin-top: 0px
 
 .icon
   width: 30px
